<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseBg"
        app:cardCornerRadius="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:contentPaddingBottom="20dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/courseImage"
                android:contentDescription="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_java2" />

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/placeholder"
                android:fontFamily="@font/montserrat_bold"
                android:layout_margin="10dp"
                android:textSize="20sp"   />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/course_start_date"
                    android:fontFamily="@font/montserrat"
                    android:layout_margin="10dp"
                    android:textSize="14sp"   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/course_level"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:textSize="14sp"   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/courseLevel"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="9dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="left"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>